codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_agents_actions.snap
---
source: tui/src/keymap_setup.rs
expression: agents
---
Resume | o | Agents resume Resume Open the session resume picker. o Default
Search | f3, / | Agents search Search Search the available agent tasks. f3, / Default
New Task | n | Agents new_task New Task Open a new session in the selected checkout. n Default
New Worktree | w | Agents new_worktree New Worktree Open a new session in a worktree from the project default branch. w Default
Fork | f | Agents fork Fork Fork the selected conversation and open the new session. f Default
Rename | r | Agents rename Rename Rename the selected task. r Default
Stop | x | Agents stop Stop Stop the selected running task. x Default
Archive | a | Agents archive Archive Archive the selected task and its child agents. a Default
Delete | backspace | Agents delete Delete Permanently delete the selected task and its child agents. backspace Default
Hide | h | Agents hide Hide Hide the selected task until explicitly resumed. h Default
Toggle Grouping | g | Agents toggle_grouping Toggle Grouping Cycle task grouping by project, status, or model. g Default
